[FIX] prevents the callViewer from being too small on small screens
Before this commit, the callViewer could end up too small and only have
space for the callActionList, which was hiding call participants.

taskid-3014640

closes odoo/odoo#103144

X-original-commit: b9370f5fdf0dcbcf23280f370408eab5183433e6

--- a/addons/mail/static/src/components/call_view/call_view.scss
+++ b/addons/mail/static/src/components/call_view/call_view.scss
@@ -7,7 +7,6 @@
     background: var(--CallView-background-color, #{$dark});
 
     &.o-isMinimized {
-        height: 20%;
-        min-height: 20%;
+        min-height: #{"max(20%, 130px)"};
     }
 }
